fixed extra padding

--- a/src/Course/Course.css
+++ b/src/Course/Course.css
@@ -71,7 +71,7 @@
 .content-list .sub-list.current {
   opacity: 1;
   max-height: 2000px;
-  transition: opacity 0.2s, max-height 5s;
+  transition: opacity 0.3s, max-height 5s;
 }
 
 .sub-list .sub-item::marker {
@@ -101,9 +101,11 @@
   overflow: hidden;
   opacity: 0;
   max-height: 0;
+  padding: 0;
   transition: opacity 0.3s, max-height 0.25s;
 }
 .sub-list .sub-item .sub-list-details.current {
+  padding: 5px 20px 10px 20px;
   opacity: 1;
   max-height: 2000px;
   transition: opacity 0.2s, max-height 5s;
